--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,63 @@
         </div>
     </section>
 
+    <!-- Features Section -->
+    <section class="max-w-[1440px] container mx-auto px-4 py-24" id="features">
+        <div class="flex flex-col md:flex-row items-center gap-12">
+            <!-- Left Content (Illustration) -->
+            <div class="md:w-1/2" data-aos="fade-right">
+                <img src="./images/features.png" alt="Features illustration" class="w-full">
+            </div>
+
+            <!-- Right Content -->
+            <div class="md:w-1/2 space-y-8" data-aos="fade-left">
+                <h2 class="text-4xl font-bold text-gray-900 leading-tight">
+                    We Provide Many<br>
+                    Features You Can Use
+                </h2>
+                <p class="text-gray-600 leading-relaxed">
+                    You can explore the features that we provide with fun and  <br class="hidden sm:block"> have their own functions each feature.
+                </p>
+
+                <!-- Features List -->
+                <ul class="space-y-4">
+                    <li class="flex items-center gap-3">
+                        <div class="p-1 rounded-full bg-green-100">
+                            <svg class="w-5 h-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                        </div>
+                        <span class="text-gray-600">Powerful online protection</span>
+                    </li>
+                    <li class="flex items-center gap-3">
+                        <div class="p-1 rounded-full bg-green-100">
+                            <svg class="w-5 h-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                        </div>
+                        <span class="text-gray-600">Internet without borders</span>
+                    </li>
+                    <li class="flex items-center gap-3">
+                        <div class="p-1 rounded-full bg-green-100">
+                            <svg class="w-5 h-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                        </div>
+                        <span class="text-gray-600">Supercharged VPN</span>
+                    </li>
+                    <li class="flex items-center gap-3">
+                        <div class="p-1 rounded-full bg-green-100">
+                            <svg class="w-5 h-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                        </div>
+                        <span class="text-gray-600">No specific time limits</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <!-- Pricing Section -->
     <section class="max-w-[1440px] container mx-auto px-4 py-24 bg-gray-50" id="pricing">
         <!-- Section Header -->
